[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menus/Transition.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_scene"
} ]
}

[node name="Transition" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="TextureRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
self_modulate = Color( 0, 0, 0, 0 )
margin_right = 1024.0
margin_bottom = 768.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )

[node name="DebugOverlay" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhysicsTime" type="Label" parent="DebugOverlay"]
margin_top = 29.0
margin_right = 116.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeCount" type="Label" parent="DebugOverlay"]
margin_top = 43.0
margin_right = 116.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoMem" type="Label" parent="DebugOverlay"]
margin_left = 518.327
margin_top = 29.0
margin_right = 635.327
margin_bottom = 43.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextMem" type="Label" parent="DebugOverlay"]
margin_left = 518.327
margin_top = 43.0
margin_right = 634.327
margin_bottom = 57.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
